tests/typing/errors/mismatch_record_type/error.ae

type t = { foo : bool; bar : bool }
type tt = { foobar : bool }

goal g:
  forall x:t . x = { foo = true; foobar = false }
